--- a/_posts/projects/2020-08-01-CORECOM.markdown
+++ b/_posts/projects/2020-08-01-CORECOM.markdown
@@ -7,7 +7,7 @@ excerpt_separator: <!--more-->
 project_url: https://www.coregames.com/games/b60d61/corecom
 ---
 
-<img class="post-img-center" src="{{ site.baseurl }}/assets/img/cc.jpg" width="460" height="215">
+<img class="post-img-center" src="{{ site.baseurl }}assets/img/cc.jpg" width="460" height="215">
 
 <p class="post-text-center">Team based tactical shooter. Work together with your team to obtain the bomb and destroy the enemy's base. </p>
 <!--more-->
